Modified contact.js and style.css to fix flickering contact pane

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,19 +21,29 @@ body {
 	flex-wrap: wrap;
 }
 
+.contactItemSpace {
+	margin: 10px; 	
+}
+
+.contactItemSpace:hover>.contactItem {
+	box-shadow: #666 2px 2px 3px;
+	transform: translate(2px, 2px);
+	background: #aaa;
+}
+
 .contactItem {
 	padding: 10px;
-	margin: 10px; 
+
 	background: #999;
 	box-shadow: #666 4px 4px 3px;
 	transition: 0.1s;
 	border-radius: 2px;
 	
-	&:hover {
-		box-shadow: #666 2px 2px 3px;
-		transform: translate(2px, 2px);
-		background: #aaa;
-	}
+//	&:hover {
+//		box-shadow: #666 2px 2px 3px;
+//		transform: translate(2px, 2px);
+//		background: #aaa;
+//	}
 }
 
 .contactForm {
